--- a/SYSTEM/Functions_N_Visuals/CSS/main_css001.css
+++ b/SYSTEM/Functions_N_Visuals/CSS/main_css001.css
@@ -283,7 +283,7 @@ body{
  .SelectionButtons:hover{
    height: 60px;
    width: 130px;
-
+   user-select: none;
    
    font-size: 17px;
    font-weight: bold;
@@ -292,18 +292,21 @@ body{
 
  .SelectionButtons:hover .BtnFlash{
    animation: BtnFlashAnm 1.5s infinite;
+   user-select: none;
  }
 
  .SelectionButtons:active{
    height: 55px;
    width: 125px;
-
+   user-select: none;
    
    font-size: 15px;
    font-weight: bold;
  }
 
  .BtnFlash{
+   pointer-events: none ;
+    user-select: none;
    transform: rotate(35deg);
    top:-35%;
    left:115%;
